--- a/TstStreamAuctioneer/SPA/Views/Left.html
+++ b/TstStreamAuctioneer/SPA/Views/Left.html
@@ -1,16 +1,23 @@
 ﻿<div ng-controller="TabsController as tabCtrl">
     <p>
-        <button type="button" class="btn btn-default" ng-class="{active:leftTab==1}" ng-click="leftTab = 1">KniX</button>
-        <button type="button" class="btn btn-default" ng-class="{active:leftTab==2}" ng-click="leftTab = 2">History</button>
-        <button type="button" class="btn btn-default" ng-class="{active:leftTab==3}" ng-click="leftTab = 3">Chat</button>
-        <br />
-        <selection style="border:1px; border-color:white;">
-            Test
-            <ul>
-                List
-                <li>A</li>
-                <li>A</li>
-            </ul>
-        </selection>
+        <uib-tabset>
+            <uib-tab index="0">
+                <uib-tab-heading>KniX</uib-tab-heading>
+            </uib-tab>
+            <uib-tab index="1">
+                <uib-tab-heading>History</uib-tab-heading>
+            </uib-tab>
+            <uib-tab index="2">
+                <uib-tab-heading>
+                    <i class="glyphicon glyphicon-bell"></i>
+                Chat
+                </uib-tab-heading>
+            </uib-tab>
+            
+            <uib-tab index="$index + 1" ng-repeat="tab in tabs" disable="tab.disabled">
+                {{tab.content}}
+            </uib-tab>
+            
+        </uib-tabset>
     </p>
 </div>
