--- a/TstStreamAuctioneer/SPA/Views/Left.html
+++ b/TstStreamAuctioneer/SPA/Views/Left.html
@@ -1,23 +1,25 @@
 ﻿<div ng-controller="TabsController as tabCtrl">
     <p>
         <uib-tabset>
-            <uib-tab index="0">
-                <uib-tab-heading>KniX</uib-tab-heading>
-            </uib-tab>
             <uib-tab index="1">
-                <uib-tab-heading>History</uib-tab-heading>
+                <uib-tab-heading>KniX</uib-tab-heading>
+                first tab
             </uib-tab>
             <uib-tab index="2">
+                <uib-tab-heading>History</uib-tab-heading>
+                second tab
+            </uib-tab>
+            <uib-tab index="3">
                 <uib-tab-heading>
                     <i class="glyphicon glyphicon-bell"></i>
                 Chat
                 </uib-tab-heading>
+                third tab
             </uib-tab>
             
             <uib-tab index="$index + 1" ng-repeat="tab in tabs" disable="tab.disabled">
                 {{tab.content}}
             </uib-tab>
-            
         </uib-tabset>
     </p>
 </div>
