Pseudo functionality added to buyout function

--- a/TstStreamAuctioneer/SPA/Views/Modal/Buyout.html
+++ b/TstStreamAuctioneer/SPA/Views/Modal/Buyout.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-default pull-left">Cancel</button>
-        <button class="btn btn-default pull-right">Buyout</button>
+        <button class="btn btn-default pull-left" ng-click="cancel()">Cancel</button>
+        <button class="btn btn-default pull-right" ng-click="ok()">Buyout</button>
     </div>
 </div>
