--- a/TstStreamAuctioneer/Views/Home/Index.cshtml
+++ b/TstStreamAuctioneer/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     @Scripts.Render("~/SPA/Controllers")
     <title>Stream Auctioneer</title>
 </head>
-<body ng-app="mainModule">
+<body ng-app="mainModule" ng-controller="AuthController as authCtrl">
     <div class="row">
         <div class="col-md-3">
             <div left-view></div>
