--- a/TstStreamAuctioneer/Views/Home/Index.cshtml
+++ b/TstStreamAuctioneer/Views/Home/Index.cshtml
@@ -7,14 +7,17 @@
     <title>Stream Auctioneer</title>
 </head>
 <body ng-app="mainModule" ng-controller="AuthController as authCtrl">
-    <div class="row">
-        <div class="col-md-3">
-            <div left-view></div>
-        </div>
+    <section>
+        <div class="row">
+            <div class="col-md-3">
+                <div left-view></div>
+            </div>
 
-        <div class="col-md-9">
-            <div right-view></div>
+            <div class="col-md-9">
+                <div right-view></div>
+            </div>
         </div>
-    </div>
+    </section>
+    <footer> <center>a valiman production</center> </footer>
 </body>
 </html>
