--- a/TstStreamAuctioneer/SPA/Views/Right.html
+++ b/TstStreamAuctioneer/SPA/Views/Right.html
@@ -2,65 +2,54 @@
     <p>
         <div class="form-group form-inline auction-form">
             <div ng-show="isLoggedIn">
-                <button type="button"
-                        class="btn btn-default form-control"
-                        ng-class="{disabled:(tableRowSelectedData.row == null)}"
-                        ng-model="buyoutBtn"
-                        ng-click="auctionCtrl.buyout(tableRowSelectedData.row)">
-                    Buyout
-                </button>
-                <button type="button"
-                        class="btn btn-default form-control"
-                        ng-class="{disabled:(bidValue == null)}"
-                        ng-model="bidBtn"
-                        ng-click="auctionCtrl.bid(tableRowSelectedData.row)">
-                    Bid
-                </button>
-                <input class="form-control" type="number" ng-model="bidValue" id="bidValue"> $
+                <p>
+                    <button type="button" class="btn btn-default form-control" ng-disabled="tableRowSelectedData.row == null" ng-model="buyoutBtn" ng-click="auctionCtrl.buyout(tableRowSelectedData.row)">
+                        Buyout
+                    </button>
+                    <button type="button" class="btn btn-default form-control" ng-disabled="bidValue == null" ng-model="bidBtn" ng-click="auctionCtrl.bid(tableRowSelectedData.row)">
+                        Bid
+                    </button>
+                    <input class="form-control" type="number" ng-model="bidValue" id="bidValue"> $
+                    <button type="button" class="btn btn-default form-control pull-right" ng-model="createBtn" ng-click="auctionCtrl.create()">
+                        Create Auction
+                    </button>
+                </p>
             </div>
-            <table class="table" id="auctionTable">
-                <thead>
-                    <tr>
-                        <th>
-                            User Rating 
-                        </th>
-                        <th>
-                            Twitch User
-                        </th>
-                        <th>
-                            Avg. Viewers
-                        </th>
-                        <th>
-                            Price ($)
-                        </th>
-                        <th>
-                            Highest bid ($)
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="auction in auctionList" ng-click="tableRowSelectedData.row = auction">
-                        <td>{{auction.userRating}}</td>
-                        <td>{{auction.userName}}</td>
-                        <td>{{auction.avgViewers}}</td>
-                        <td>{{auction.price}}</td>
-                        <td>{{auction.highestBid}}</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <!--
-            ng-model holds the clicked-number/page.
-            ng-change calls the method responsible for getting the next 10 rows.
-            -->
-            <ul uib-pagination
-                total-items="30"
-                max-size="10"
-                ng-model="currentPage"
-                ng-change="setPage()"></ul>
         </div>
+    <table class="table" id="auctionTable">
+        <thead>
+            <tr>
+                <th>
+                    User Rating
+                </th>
+                <th>
+                    Twitch User
+                </th>
+                <th>
+                    Avg. Viewers
+                </th>
+                <th>
+                    Price ($)
+                </th>
+                <th>
+                    Highest bid ($)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="auction in auctionList" ng-click="tableRowSelectedData.row = auction">
+                <td>{{auction.userRating}}</td>
+                <td>{{auction.userName}}</td>
+                <td>{{auction.avgViewers}}</td>
+                <td>{{auction.price}}</td>
+                <td>{{auction.highestBid}}</td>
+            </tr>
+        </tbody>
+    </table>
+<!--
+ng-model holds the clicked-number/page.
+ng-change calls the method responsible for getting the next 10 rows.
+-->
+        <ul uib-pagination total-items="30" max-size="10" ng-model="currentPage" ng-change="setPage()"></ul>
     </p>
 </div>
-<script>
-    
-</script>
