--- a/TstStreamAuctioneer/SPA/Views/Modal/ViewAuction.html
+++ b/TstStreamAuctioneer/SPA/Views/Modal/ViewAuction.html
@@ -2,23 +2,23 @@
     <div id="modal">
         <div class="modal-header">
             <center>
-                <h2 center>{{dataObject.typeName}}</h2>
+                <h2 center>{{dataObj.typeName}}</h2>
             </center>
         </div>
         <div class="modal-body">
             <center>
-                You've decided to {{dataObject.typeName}} on <i>{{dataObject.userName}}</i>
+                You've decided to {{dataObj.typeName}} on <i>{{dataObj.userName}}</i>
             </center>
             <ul>
-                <li>Price: {{dataObject.price | currency}}</li>
-                <li>Avg. Viewers: {{dataObject.avgViewers}}</li>
-                <li>Highest Bid: {{dataObject.highestBid}}</li>
-                <li>User Rating: {{dataObject.userRating}}</li>
+                <li>Price: {{dataObj.price | currency}}</li>
+                <li>Avg. Viewers: {{dataObj.avgViewers}}</li>
+                <li>Highest Bid: {{dataObj.highestBid}}</li>
+                <li>User Rating: {{dataObj.userRating}}</li>
             </ul>
         </div>
         <div class="modal-footer">
             <button class="btn btn-default pull-left" ng-click="cancel()">Cancel</button>
-            <button class="btn btn-default pull-right" ng-click="ok(dataObject.typeName)">{{dataObject.typeName}}</button>
+            <button class="btn btn-default pull-right" ng-click="ok(dataObj.typeName)">{{dataObj.typeName}}</button>
         </div>
     </div>
 </div>
