--- a/TstStreamAuctioneer/SPA/Views/Left.html
+++ b/TstStreamAuctioneer/SPA/Views/Left.html
@@ -1,30 +1,45 @@
-﻿<div ng-controller="TabsController as tabsCtrl">
-    <p ng-show="isLoggedIn">
-        <uib-tabset>
-            <uib-tab index="1">
-                <uib-tab-heading>{{user.userName}}</uib-tab-heading>
-                first tab
-            </uib-tab>
-            <uib-tab index="2">
-                <uib-tab-heading>History</uib-tab-heading>
-                second tab
-            </uib-tab>
-            <uib-tab index="3">
-                <uib-tab-heading>
-                    <i class="glyphicon glyphicon-bell"></i>
-                    Chat
-                </uib-tab-heading>
+﻿<p ng-show="isLoggedIn">
+    <uib-tabset>
+        <uib-tab index="1">
+            <uib-tab-heading>{{user.UserName}}</uib-tab-heading>
+            <text>
+                User created on {{user.CreationDate | date:"yyyy-MM-dd"}}
+            </text>
+        </uib-tab>
+        <uib-tab index="2">
+            <uib-tab-heading>History</uib-tab-heading>
+            <text ng-repeat="auction in user.Auctions">
+               {{auction.Id}}<button class="btn btn-default">View</button>
+                <br />
+            </text>
+        </uib-tab>
+        <uib-tab index="3">
+            <uib-tab-heading>
+                <i class="glyphicon glyphicon-bell"></i>
+                Chat
+            </uib-tab-heading>
+            <text>
                 third tab
+            </text>
             </uib-tab>
 
-            <uib-tab index="$index + 1" ng-repeat="tab in tabs" disable="tab.disabled">
-                {{tab.content}}
-            </uib-tab>
-        </uib-tabset>
-    </p>
-    <p ng-show="!isLoggedIn">
-        Login through Twitch.tv OAuth to see your options.
-        <br /><br />
-        <button class="btn btn-default" ng-click="Login()">Login</button>
-    </p>
-</div>
+        <uib-tab index="$index + 1" ng-repeat="tab in tabs" disable="tab.disabled">
+            {{tab.content}}
+        </uib-tab>
+    </uib-tabset>
+</p>
+<p>
+    <div class="form-group" ng-show="!isLoggedIn">
+
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input id="username" type="text" class="form-control" name="username" placeholder="Username" ng-model="userName">
+        </div>
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="password" type="password" class="form-control" name="password" placeholder="Password" ng-model="userPassword">
+        </div>
+
+        <button class="btn btn-default pull-right" ng-click="Login()">Login</button>
+    </div>
+</p>
